# tiny_kafka

./: Cargo.toml  LICENSE  Readme.md  docker-compose.yml
src/: consumer.rs  error.rs  lib.rs  producer.rs
tests/: integration_test.rs
