[package]
name = "tiny_kafka"
version = "1.0.4"
authors = ["Christos Ploutarchou <cploutarchou@gmail.com>"]
edition = "2021"
description = "A tiny Kafka client library with producer and consumer functionalities."
license = "MIT"
repository = "https://github.com/cploutarchou/tiny_kafka"
keywords = ["kafka", "rust-client", "producer", "consumer", "streaming"]

[dependencies]
tokio = { version = "1", features = ["full", "test-util"] }  # Ensure 'test-util' feature is enabled for testing
bytes = "1"

[dev-dependencies]
mockall = "0.12.1"  # for mocking



[lib]
name = "tiny_kafka"
path = "src/lib.rs"
