[package]
name = "tiny_kafka"
version = "1.0.6"
authors = ["Christos Ploutarchou <cploutarchou@gmail.com>"]
edition = "2021"
description = "A tiny Kafka client library with producer and consumer functionalities."
license = "MIT"
repository = "https://github.com/cploutarchou/tiny_kafka"
documentation = "https://docs.rs/tiny_kafka"
homepage = "https://github.com/cploutarchou/tiny_kafka"
readme = "README.md"
keywords = ["kafka", "rust-client", "producer", "consumer", "streaming"]
categories = ["network-programming", "asynchronous", "database", "api-bindings"]
rust-version = "1.70.0"

[dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
bytes = "1.5.0"
thiserror = "1.0"
tracing = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = { version = "1.5", features = ["unicode-case"] }

[dev-dependencies]
mockall = "0.12.1"
tracing-subscriber = "0.3"
tokio-test = "0.4"
assert_matches = "1.5"
tracing-test = "0.2"

[lib]
name = "tiny_kafka"
path = "src/lib.rs"
